configure maven for jdk-19-preview